# Checkers

./: CMakeLists.txt  main.cpp  settings.json
Game/: Board.h  CheckersGame.cpp  CheckersGame.h  Config.h  Game.h  Hand.h  Logic.h  Move.h  Response.h
